# geyma-file-manager

./: .gitignore  AGENTS.md  AI.md  AI_POLICY.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  SETTINGS_TODO.md  TODO.md  TODO_REVIEW.md  geyma.desktop  index.html  package-lock.json  package.json  pyproject.toml  requirements.txt  run.sh  tsconfig.app.json  tunga.config.json  vite.config.ts
.claude/skills/verify/: SKILL.md
.github/ISSUE_TEMPLATE/: 10-data-loss.yml  20-crash.yml  30-remote-connection.yml  40-packaging.yml
.github/workflows/: ci.yml  deploy-pages.yml  release.yml
archive/pyside6-legacy/: EXTRA_FEATURES.md  README.md
archive/pyside6-legacy/geyma/: app.py
archive/pyside6-legacy/geyma/ai/: __init__.py  filters.py  keystore.py  provider_base.py
archive/pyside6-legacy/geyma/ops/: trash_utils.py
archive/pyside6-legacy/geyma/ui/: __init__.py  conflict_dialog.py  search_dialog.py  (+3 more)
archive/pyside6-legacy/geyma_file_manager.egg-info/: PKG-INFO  requires.txt  top_level.txt
design/geyma-v3.2-handoff/: Feature Ideas.dc.html  Geyma.dc.html  README.md
design_handoff_geyma/: Audit Report.dc.html
docs/: AUDIT.md  FEATURES.md
geyma/: __init__.py  __main__.py
geyma/ai/: connection_test.py  provider_registry.py
geyma/ai/jobs/: rename_suggestions.py
geyma/ai/providers/: dummy.py
geyma/ops/: devices.py  search_worker.py  transfer_worker.py
geyma/ui/: ai_data_preview_dialog.py  ai_disclosure_dialog.py  bookmarks_dialog.py  dialog_utils.py  error_dialog.py  file_views.py  filters_dialog.py  icon_provider.py  icons.py  image_generation_dialog.py  main_window.py  models.py  progress_dialog.py  properties_dialog.py  settings_dialog.py  sidebar.py  style.py  title_bar.py
geyma/utils/: config.py  operation_log.py
geyma_file_manager.egg-info/: SOURCES.txt  entry_points.txt
packaging/arch/: PKGBUILD  PKGBUILD.release
packaging/fedora/: README.md  build_rpm.sh  geyma  geyma.spec
packaging/flatpak/: no.vardir.Geyma.desktop  no.vardir.Geyma.metainfo.xml  no.vardir.Geyma.yml
snap/: snapcraft.yaml
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: ai.rs  archives.rs  error.rs  fsops.rs  lib.rs  media.rs  preview.rs  remote.rs
src-tauri/src/remote/: discovery.rs  hostkeys.rs  sftp.rs  smb.rs
src/ai/: ollama.ts
src/fs/: index.ts  mockBackend.ts  mockRemote.ts  mockTree.ts  pathUtil.ts  remotePath.ts  tauriBackend.ts  types.ts
src/i18n/: en.json  index.ts
src/icons/: Icon.tsx  paths.ts
src/layout/: EditBar.tsx  ModulePreview.tsx  ModuleShell.tsx  Titlebar.tsx  Zone.tsx
src/lib/: ErrorBoundary.tsx  batchRename.ts  contextMenus.ts  errors.ts  explainError.ts  format.ts  gyset.ts  highlight.ts  highlightEngine.ts  openDefault.ts  useKeyboardShortcuts.ts
src/modules/: Appearance.tsx  Clock.tsx  Details.tsx  Devices.tsx  Disk.tsx  Dupes.tsx  Files.tsx  Files2.tsx  Location.tsx  Mood.tsx  Nav.tsx  Network.tsx  Places.tsx  Recent.tsx  Search.tsx  Sets.tsx  Settings.tsx  Status.tsx  Tabs.tsx  Timeline.tsx  Title.tsx  ViewSwitch.tsx  Visualizer.tsx  common.tsx  options.ts  registry.tsx
src/modules/files/: FileTile.tsx  ListView.tsx  MissingItemsBanner.tsx  ghosts.tsx  menus.ts  search.ts
src/overlays/: AppearanceModal.tsx  BatchRenameModal.tsx  ConnectionModal.tsx  ContextMenu.tsx  HostKeyMismatchPrompt.tsx  Modal.tsx  ModuleOptions.tsx  PropertiesModal.tsx  QuickLook.tsx  RemotePasswordPrompt.tsx  SetRuleModal.tsx  SettingsModal.tsx  SmbBrowseModal.tsx  Toast.tsx
src/overlays/quicklook/: EntryListing.tsx  MediaPreview.tsx  MediaUnavailable.tsx  MetadataPreview.tsx  useQuickLookContent.ts
src/state/: helpers.ts  layout.ts  persistence.ts  store.ts  types.ts
src/state/slices/: ai.ts  appearance.ts  core.ts  fileOps.ts  journal.ts  nav.ts  remote.ts  sets.ts  trash.ts  ui.ts  view.ts
src/styles/: fonts.ts  global.css
src/theme/: ThemeContext.tsx  skins.ts
website/: README.md  index.html
(+6 files in other folders)
