[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "geyma-file-manager"
version = "0.4.0"
description = "A deliberate, local-first desktop file manager built with PySide6."
readme = "README.md"
requires-python = ">=3.10"
license = "LicenseRef-Proprietary"
dependencies = [
    "PySide6>=6.5",
    "keyring>=24.0",
]

[project.scripts]
geyma = "geyma.app:main"

[project.optional-dependencies]
dev = [
    "black>=24.0",
    "ruff>=0.6",
]

[tool.setuptools.packages.find]
include = ["geyma*"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.ruff.isort]
known-first-party = ["geyma"]
