[package]
name = "geyma"
version = "0.7.0"
description = "Geyma — a file manager that remembers"
authors = ["Geyma"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-os = "2"
trash = "5"
dirs = "5"
fs4 = "0.9"
getrandom = "0.2"
zip = { version = "2.4", default-features = false, features = ["deflate"] }
tar = "0.4"
flate2 = { version = "1.1", default-features = false, features = ["rust_backend"] }
bzip2-rs = "0.1"
lzma-rs = "0.3"
sevenz-rust = { version = "0.6", default-features = false }

[target.'cfg(target_os = "linux")'.dependencies]
libloading = "0.8"

[dev-dependencies]
# Only the test suite needs to write .7z fixtures; the app itself only reads them, so
# the "compress" encoder is kept off the default (non-dev) sevenz-rust dependency above.
sevenz-rust = { version = "0.6", features = ["compress"] }
